--- a/Assignments/01-intro /index.html
+++ b/Assignments/01-intro /index.html
@@ -1,10 +1,14 @@
 <html>
     <header>
         <meta charset="utf-8">
-        <script src="script/sketch.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
         <script src="libraries/p5.min.js"></script>
         <script src="libraries/p5.sound.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="css/style.css">
+
     </header>
-    <body></body>
+    <body>
+        <script src="script/sketch.js"></script>
+
+    </body>
+
 </html>
