--- a/Assignments/01-intro /index.html
+++ b/Assignments/01-intro /index.html
@@ -1,14 +1,10 @@
 <html>
     <header>
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="css/style.css">
         <script src="libraries/p5.min.js"></script>
-        <script src="libraries/p5.sound.min.js"></script>
-
-    </header>
-    <body>
+        <!-- <script src="libraries/p5.sound.min.js"></script> -->
         <script src="script/sketch.js"></script>
-
-    </body>
-
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+    </header>
+    <body></body>
 </html>
