--- a/Assignments/02-time/sketch/index.html
+++ b/Assignments/02-time/sketch/index.html
@@ -10,6 +10,7 @@
     </head>
 
     <body>
+        <!-- <script src="particle.js"></script> -->
         <script src="sketch.js"></script>
     </body>
 
@@ -22,4 +23,13 @@
 face recognition for p5js 
 https://www.youtube.com/watch?v=3yqANLRWGLo 
 
+
+reading pixels with camera feed
+https://youtu.be/VYg-YdGpW1o
+https://youtu.be/rNqaw8LT2ZU
+https://www.youtube.com/watch?v=0V3uYA1hafk&list=PLRqwX-V7Uu6aKKsDHZdDvN6oCJ2hRY_Ig&index=6
+
+
+flashing (timed)
+https://editor.p5js.org/doubleshow/sketches/BJdU6tFSM
 -->
