--- a/Assignments/01-intro /index.html
+++ b/Assignments/01-intro /index.html
@@ -1,9 +1,10 @@
 <html>
     <header>
         <meta charset="utf-8">
-        <script src="libraries/p5.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js" integrity="sha512-N4kV7GkNv7QR7RX9YF/olywyIgIwNvfEe2nZtfyj73HdjCUkAfOBDbcuJ/cTaN04JKRnw1YG1wnUyNKMsNgg3g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
         <!-- <script src="libraries/p5.sound.min.js"></script> -->
-        <script src="script/sketch.js"></script>
+        <script src="sketch.js"></script>
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </header>
     <body></body>
